# BallInterception

./: README.md
window10/: CMakeLists.txt  InterceptionMultiThread.cpp  InterceptionMultiThread_Tracker.cpp  InterceptionSingleThread.cpp
window10/include/: GetImage.cpp  GetImage.h  RefereeBox.cpp  RefereeBox.h  gotoposition.hpp  kalmanfilter.h  zsplugin.hpp
window10/visual studio 2015/settings/: CurrentSettings.vssettings
windows/: CMakeLists.txt  InterceptionSingleThread.cpp  build.bat
windows/lib/x64/: realsense2.lib
